--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ footer {
 .emphasis{
   font-weight: bold;
 }
+
+.revival{
+  font-family: "ranga", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
